--- a/index.html
+++ b/index.html
@@ -12,54 +12,32 @@
 
     <h1>Game of Thrones Characters</h1>
 
-    <div id="image-gallery" class="container"></div>
+    <div id="bodyContainer">
+        <div id="'test1">test1</div>
 
-    <!-- The Modal -->
-    <div id="myModal" class="modal">
+        <div id="image-gallery" class="container"></div>
 
-      <!-- The Close Button -->
-      <span class="close">&times;</span>
+        <div id="'test2">test2</div>
 
-      <!-- Modal Content (The Image) -->
-      <img class="modal-content" id="img01">
-
-      <!-- Modal Caption (Image Text) -->
-      <div id="caption"></div>
     </div>
 
+            <!-- The Modal -->
+            <div id="myModal" class="modal">
+              <!-- The Close Button -->
+              <span class="close">&times;</span>
 
+              <!-- Modal Content (The Image) -->
+              <img class="modal-content" id="img01">
 
-  <!-- Ramen Details -->
-  <!-- <div id="ramen-detail">
-    <img class="detail-image" src="./assets/image-placeholder.jpg" alt="Insert Name Here" />
-    <h2 class="name">Insert Name Here</h2>
-    <h3 class="restaurant">Insert Restaurant Here</h3>
-  </div> -->
+              <!-- Modal Caption (Image Text) -->
+              <div id="caption"></div>
 
-  <!-- <h3>Rating:</h3>
-  <p>
-    <span id='rating-display'>Insert rating here</span> / 10
-  </p>
-  <h3>Comment:</h3>
-  <p id='comment-display'>
-    Insert comment here
-  </p> -->
+        </div>
 
-  <!-- New Ramen Form -->
-  <!-- <form id="new-ramen">
-    <h4>Add New Ramen</h4>
-    <label for="name">Name: </label>
-    <input type="text" name="name" id="new-name" />
-    <label for="restaurant">Restaurant: </label>
-    <input type="text" name="restaurant" id="new-restaurant" />
-    <label for="image">Image: </label>
-    <input type="text" name="image" id="new-image" />
-    <label for="rating">Rating: </label>
-    <input type="number" name="rating" id="new-rating" />
-    <label for="new-comment">Comment: </label>
-    <textarea name="new-comment" id="new-comment"></textarea>
-    <input type="submit" value="Create" />
-  </form> --> 
+        
+
+      
+
 
 </body>
 
