--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Game of Thrones Characters</h1>
 
     <div id="bodyContainer">
-      <div id="'favDiv">Favorites</div>
+      <div id="favDiv">Favorites</div>
         <div id="image-gallery" class="container"></div>
       <div id="'killDiv">Dead</div>
     </div>
