--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="bodyContainer">
       <div id="favDiv">Favorites</div>
         <div id="image-gallery" class="container"></div>
-      <div id="'killDiv">Dead</div>
+      <div id="killDiv">Dead</div>
     </div>
     
     <div id="myModal" class="modal">
