--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <h1>Game of Thrones Characters</h1>
 
     <div id="bodyContainer">
-      <div id="favDiv">Favorites</div>
-        <div id="image-gallery" class="container"></div>
-      <div id="killDiv">Dead</div>
+      <div id="favDiv" class="smallContainer">Favorites</div>
+      <div id="image-gallery" class="container"></div>
+      <div id="killDiv" class="smallContainer">Dead</div>
     </div>
     
     <div id="myModal" class="modal">
