--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
 
     <h1>Game of Thrones Characters</h1>
-
+  
     <div id="bodyContainer">
-      <div id="favDiv" class="smallContainer">Favorites</div>
+      <div id="favDiv" class="favContainer">Favorite Characters</div>
       <div id="image-gallery" class="container"></div>
-      <div id="killDiv" class="smallContainer">Dead</div>
+      <div id="killDiv" class="killContainer">Killed in Action</div>
     </div>
     
     <div id="myModal" class="modal">
