--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="bodyContainer">
       <div id="favDiv" class="favContainer">Favorite Characters</div>
       <div id="image-gallery" class="container"></div>
-      <div id="killDiv" class="killContainer">Killed in Action</div>
+      <div id="killDiv" class="killContainer">Killed in Combat</div>
     </div>
     
     <div id="myModal" class="modal">
