--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 
 <body>
 
-    <h1>Game of Thrones Characters</h1>
+    <header>
+      <img class="headerImg" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2e/Game_of_Thrones_2011_logo.svg/2560px-Game_of_Thrones_2011_logo.svg.png"/>
+    </header>
+    <h1>Character Fan Page</h1>
   
     <div id="bodyContainer">
       <div id="favDiv" class="favContainer">Favorite Characters</div>
@@ -39,4 +42,7 @@ Heart Icon
 
 Sword Icon
 <a target="_blank" href="https://icons8.com/icon/o8II04rkX02o/swords">Swords icon by Icons8</a>
+
+Game of Thrones logo
+<a href= "https://commons.wikimedia.org/wiki/File:Game_of_Thrones_2011_logo.svg">
 -->
