CSS images and aesthetics

--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
 
     <header>
       <img class="headerImg" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2e/Game_of_Thrones_2011_logo.svg/2560px-Game_of_Thrones_2011_logo.svg.png"/>
+      <h1>Character Fan Page</h1>
     </header>
-    <h1>Character Fan Page</h1>
+    
   
     <div id="bodyContainer">
-      <div id="favDiv" class="favContainer">Favorite Characters</div>
+      <div id="favDiv" class="favContainer">Favorite<br> Characters</div>
       <div id="image-gallery" class="container"></div>
-      <div id="killDiv" class="killContainer">Killed in Combat</div>
+      <div id="killDiv" class="killContainer">Killed in<br> Combat</div>
     </div>
     
     <div id="myModal" class="modal">
@@ -36,6 +37,10 @@
 </html>
 
 
+
+
+
+
 <!--
 Heart Icon
 <a target="_blank" href="https://icons8.com/icon/UvwcJMZZ1Xmg/heart">Heart icon by Icons8</a>
@@ -45,4 +50,9 @@ Sword Icon
 
 Game of Thrones logo
 <a href= "https://commons.wikimedia.org/wiki/File:Game_of_Thrones_2011_logo.svg">
+
+Background Image
+https://www.flickr.com/photos/douglastofoli/27905507971/
+tofoli.douglas
+Attribution Public Domain Mark 1.0
 -->
