cleaned up comments

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       <div id="killDiv" class="killContainer">Killed in<br> Combat</div>
     </div>
     
-    <div id="myModal" class="modal">
+    <div id="modal" class="modal">
       <span class="close">&times;</span>
-      <img class="modal-content" id="img01">
+      <img class="modal-content" id="charImg">
       <span class="heart"><img src="https://img.icons8.com/officel/80/000000/like--v1.png"/></span>
       <span class="swords"><img src="https://img.icons8.com/external-victoruler-linear-colour-victoruler/64/000000/external-swords-chess-victoruler-linear-colour-victoruler.png"/></span>
       <div id="caption"></div>
